# rust-finance-solution-experiment

./: .gitignore  Cargo.toml  Excel Module Calculations.xlsx  Future Value Calculations.xlsx  IRR Calculations.xlsx  Loan Calculations.xlsx  Payment Calculations.xlsx  Periods Calculations.xlsx  Present Value Calculations.xlsx  README.md  Rate Calculations.xlsx  Time Value of Money Calculations.xlsx  finance-unit-tests.xlsx
src/: format.rs  format_locale.rs  format_num_format.rs  lib.rs  main.rs  types.rs
src/academic/: mod.rs
src/alternative_1/: finance.rs  flat_debug_examples.rs  mod.rs
src/cashflow/: payment.rs
src/core/: mod.rs
src/core/cashflow/: payment.rs
src/core/tvm/: future_value.rs  mod.rs  present_value.rs  rate.rs
src/npv/: irr.rs  mod.rs
src/problems/: mast_fin_calc.rs  mod.rs
src/simple/: loan.rs  mod.rs
src/tvm/: future_value.rs  mod.rs  periods.rs  present_value.rs  rate.rs
