[package]
name = "finance-solution-experiment"
version = "0.0.1"
authors = ["David Thureson <David.G.Thureson@gmail.com>", "Shan Newton <shan.alexander2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num-traits = "0.2"
# ordered-float = "0.5.0"
finance-solution = { path = "../finance-solution/dev" }
float-cmp = "0.6.0"
log = "0.4.8"
env_logger = "0.7.1"
libm = "0.2.1"
colored = "1.9"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"
